--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,29 +16,35 @@
         android:theme="@style/Theme.ZenTalk"
         tools:targetApi="31">
         <activity
-            android:name=".chatingact"
-            android:exported="false" />
-        <activity
-            android:name=".OTP"
-            android:exported="false" />
-        <activity
-            android:name=".Profile"
-            android:exported="false" />
-        <activity
-            android:name=".home"
-            android:exported="false"
-            android:theme="@style/Base.Theme.ZenTalk" />
-        <activity
-            android:name=".auth"
-            android:exported="false" />
-        <activity
-            android:name=".pincreat"
-            android:exported="false" />
-        <activity
-            android:name=".signup"
+            android:name=".activities.enterpin"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.chatingact"
+            android:exported="false" />
+        <activity
+            android:name=".activities.OTP"
+            android:exported="false" />
+        <activity
+            android:name=".activities.Profile"
+            android:exported="false" />
+        <activity
+            android:name=".activities.home"
+            android:exported="false"
+            android:theme="@style/Base.Theme.ZenTalk" />
+        <activity
+            android:name=".activities.auth"
+            android:exported="false" />
+        <activity
+            android:name=".activities.pincreat"
+            android:exported="false" />
+        <activity
+            android:name=".activities.signup"
+            android:exported="false" />
+        <activity
+            android:name=".activities.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.App.ZenTalk">
             <intent-filter>
